--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Titulo Nuevo! modificado</h1>
 
     <form action="#" method="GET">
-        <input type="button" value="Enviar">
+        <label for="enviar">Enviar</label>
+        <input type="button" value="Enviar" id="enviar">
     </form>
 </body>
 </html>
